2013-08-22  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.ac (EMACS_CONFIG_OPTIONS): Quote systematically (Bug#13274).
	This improves on the patch already installed, by quoting options
	that contain spaces and suchlike systematically, so that
	EMACS_CONFIG_OPTIONS is no longer ambiguous when options contain
	these characters.

2013-08-21  Paul Eggert  <eggert@cs.ucla.edu>

	Port close-on-exec pty creation to FreeBSD 9.1-RELEASE (Bug#15129).
	* configure.ac (PTY_OPEN): If posix_openpt with O_CLOEXEC fails
	and reports EINVAL, try it again without O_CLOEXEC.  This should
	port PTY_OPEN to FreeBSD 9, which stupidly rejects O_CLOEXEC.
	What were they thinking?

2013-08-20  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.in (distclean, bootstrap-clean, maintainer-clean):
	Fix shell-operator precedence problem in previous change.

2013-08-20  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (distclean, bootstrap-clean, maintainer-clean):
	Clean test/automated if present.

2013-08-19  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2013-08-15 warnings: minor optimization
	2013-08-15 warnings: check -Wfoo rather than -Wno-foo

2013-08-15  Ken Brown  <kbrown@cornell.edu>

	* configure.ac (G_SLICE_ALWAYS_MALLOC): Update comment.

2013-08-15  Glenn Morris  <rgm@gnu.org>

	* make-dist: Do not distribute etc/refcards TeX intermediate files.
	* Makefile.in (install-arch-indep):
	Do not install etc/refcards TeX intermediate files.

2013-08-14  Ulrich Müller  <ulm@gentoo.org>

	* configure.ac (EMACS_CONFIGURATION): Escape backslashes.  (Bug#15091)

2013-08-12  Eli Zaretskii  <eliz@gnu.org>

	* configure.ac (HAVE_ZLIB): Don't use -lz on MinGW.

2013-08-12  Paul Eggert  <eggert@cs.ucla.edu>

	Minor zlib configuration tweaks.
	* configure.ac (HAVE_ZLIB): Don't assume zlib is linked if PNG is.

2013-08-12  Eli Zaretskii  <eliz@gnu.org>

	* configure.ac (LIBZ): Comment on w32 peculiarities regarding LIBZ.

2013-08-12  Paul Eggert  <eggert@cs.ucla.edu>
